--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>WiFi Connect</title>
+		<title>Allevi Wifi Connect</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!-- Latest compiled and minified CSS -->
